# icepack-fisoc

./: CMakeLists.txt  README.md  build.sh  init.sh
Applications/ROMSsmoothing/: Dockerfile  FISOC_config.rc  FOOL_config.rc  isomip_plus.h  makefile  ocean_isomip_plus.in
dockerfiles/: .gitignore  build.sh
dockerfiles/dummy-dummy/: Dockerfile
dockerfiles/elmer-roms/: Dockerfile  FISOC_config.rc
dockerfiles/esmf/: Dockerfile
dockerfiles/fool-roms/: Dockerfile  FISOC_config.rc  isomip_grd.v6.2km.nc  ocean_isomip_plus_sm.in
dummy-dummy/: Dockerfile
dummy-roms/: Dockerfile  FISOC_config.rc  ocean_isomip_plus.in
elmer-roms/: Dockerfile  FISOC_config.rc  ocean_iceshelf2d_toy_gl.in
esmf/: Dockerfile
fool-roms/: Dockerfile
icepack-dummy/: Dockerfile  FISOC_config.rc
icepack-roms/: Dockerfile  icepack-config.json  make_ism_input_data.py
python/: simulation.py
src/: CMakeLists.txt  fisoc_icepack.F90  fisoc_icepack.f90
test/: CMakeLists.txt  config.json  wrapper_test.f90
test/data/: a.txt  generate_data.py  h.txt  mesh.msh  u.txt
